--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,27 @@
   </head>
   <body>
     <%- include('./layout/header'); -%>
-
+    <!-- banner start -->
+    <section class="position-relative">
+      <div class="banner d-flex flex-column align-items-lg-center justify-content-between justify-content-lg-end">
+        <div class="container-fluid">
+          <img class="logoText d-none d-md-block mt-md-9" src="../assets/images/index-banner-logoText.png" alt="logoText">
+          <img class="d-block d-md-none ms-auto mx-sm-auto mt-8" src="../assets/images/index-banner-logoText-sm.png" alt="logoText-sm">
+        </div>
+        <div class="container-fluid px-md-0 btnGroup d-flex flex-column align-items-end">
+          <div class="banner-text mb-3 mb-sm-7 position-relative align-self-sm-center align-self-lg-end">
+            <img class="position-absolute img_comma d-none d-md-block" src="../assets/images/index-banner-comma.png" alt="comma">
+            <h1 class="fs-5 fs-md-2 py-3 px-5 py-md-7 px-md-9 font-NotoSerif fw-bold text-primary">隨時隨地預約，<br class="d-lg-none">即刻享受我們精心準備的歐式早午餐饗宴。<br>
+            將陽光融入每一口滋味</h1>
+          </div>
+          <a href="#" class="btn_reserve align-self-sm-center py-3 px-9 py-md-4 px-md-11 btn_reserve_center">立即訂位</a>
+        </div>
+      </div>
+      <img class="desktop_arrow d-none d-sm-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
+    </section>
+    <!-- banner end -->
+    
+    
     <h1 class="font-NotoSans">
       <span class="material-symbols-outlined">
         home
