--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-69b2a30c.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-a2752e7f.css">
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-110a8fe1.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-fe4959c9.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>    <h1>我是contact</h1>
+    <header>
+  <div class="container d-flex justify-content-between align-items-center py-5">
+    <a href="index.html">
+      <img src="/Luminous-Brunch/assets/Logo-lg-ae67a17f.png" alt="Logo-lg">
+    </a>
+    <ul class="list-unstyled d-flex mb-0 align-items-center navbar_group">
+      <li class="nav_item">
+        <a class="py-3 px-5 fw-500 nav_item_link" href="#">關於我們</a>
+      </li>
+      <li class="nav_item">
+        <a class="py-3 px-5 fw-500 nav_item_link" href="#">最新消息/優惠</a>
+      </li>
+      <li class="d-flex align-items-center nav_item">
+        <a class="py-3 px-5 fw-500 position-relative selectMenu nav_item_link" href="#">餐點介紹<span class="material-symbols-outlined align-bottom">
+          arrow_drop_down
+        </span></a>
+        <ul class="dropdown position-absolute list-unstyled ps-0">
+          <li><a class="py-3 px-5" href="#">沙拉系列</a></li>
+          <li><a class="py-3 px-5" href="#">漢堡系列</a></li>
+          <li><a class="py-3 px-5" href="#">三明治系列</a></li>
+          <li><a class="py-3 px-5" href="#">早午餐拼盤</a></li>
+          <li><a class="py-3 px-5" href="#">義大利麵系列</a></li>
+          <li><a class="py-3 px-5" href="#">飲品</a></li>
+        </ul>
+      </li>
+      <li class="nav_item">
+        <a class="py-3 px-5 fw-500 nav_item_link" href="#">線上訂位</a>
+      </li>
+      <li class="nav_item">
+        <a class="py-3 px-5 fw-500 nav_item_link" href="#">會員註冊/登入</a>
+      </li>
+    </ul>
+  </div>
+</header>    <h1>我是contact</h1>
     <footer class="footer">我是 footer</footer>
     
   </body>
