--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,30 @@
       <img class="desktop_arrow d-none d-sm-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
     </section>
     <!-- banner end -->
-    
+   <!-- 提供服務-start -->
+
+   <h2 class="text-primary font-NotoSerif fw-bold text-center mb-11 mt-11">
+    <img src="/assets/images/scrollDesktop.png" alt="" />
+    <div class="d-flex justify-content-center mb-7">
+      <p class="font-Caveat">Lumunous</p>
+      <p class="font-NotoSerif">&emsp;想提供您...</p>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="d-flex flex-column mb-3">
+        <img src="/assets/images/offerService3.png" alt="" />
+        <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
+      </div>
+      <div class="d-flex flex-column mb-3">
+        <h5 class="text-yellow-300 font-NotoSerif">明亮寬敞的用餐環境</h5>
+        <img src="/assets/images/offerService.png" alt="" />
+      </div>
+      <div class="d-flex flex-column mb-3">
+        <img src="/assets/images/offerService2.png" alt="" />
+        <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
+      </div>
+    </div>
+  </h2>
+  <!-- 提供服務-end -->
     
    
 
