新增顧客評論

--- a/pages/index.html
+++ b/pages/index.html
@@ -150,7 +150,64 @@
   <!-- swiper+菜單輪播測試 結束 -->
   <!-- 菜單區塊 end -->
     
-
+<!-- 顧客評論 start-->
+<div class="bg h-100">
+    <div class="container">
+      <div class="row pt-11">
+          <div class="col-md-2 d-flex align-items-center justify-content-center">
+              <div class="text">
+                  <h3>顧客評論</h3>
+                  <div>
+                      <ul class="d-flex justify-content-around pt-4">
+                          <li class="arrow-left"><a href="#"><img src="/assets/images/Vector.png" alt=""></a></li>
+                          <li class="arrow-right"><a href="#"><img src="/assets/images/Vector-right.png" alt=""></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-5">
+              <div class="card">
+                  <ul class="d-flex">
+                      <li><img src="/assets/images/Avatar.png" alt="" class="coad-img"></li>
+                      <li><div class="card-name">陳大名</div></li>
+                  </ul>
+                  <div class="card-body">
+                      <div class="star-box d-flex">
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                      </div>
+                      <p>他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。<p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-5">
+              <div class="card">
+                  <ul class="d-flex">
+                      <li><img src="/assets/images/Avatar.png" alt="" class="coad-img"></li>
+                      <li><div class="card-name">陳大名</div></li>
+                  </ul>
+                  <div class="card-body">
+                      <div class="star-box d-flex">
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                          <div class="star"></div>
+                      </div>
+                      <p>他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。<p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="d-flex justify-content-center mt-11 pb-11 booking">
+          <button type="button" class="btn btn-lg ">立即訂位</button>
+      </div>
+    </div>
+</div>
+<!-- 顧客頻論 end -->
     <%- include('./layout/footer'); -%>
 
     
