--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
           <a href="#" class="btn_reserve align-self-sm-center py-3 px-9 py-md-4 px-md-11 btn_reserve_center">立即訂位</a>
         </div>
       </div>
-      <img class="desktop_arrow d-none d-sm-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
+      <img class="desktop_arrow d-none d-md-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
     </section>
     <!-- banner end -->
    <!-- 提供服務-start -->
