--- a/pages/index.html
+++ b/pages/index.html
@@ -52,7 +52,7 @@
           >
         </div>
       </div>
-      <img class="desktop_arrow d-none d-sm-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
+      <img class="desktop_arrow d-none d-md-block" src="../assets/images/Desktop-arrow.png" alt="Desktop-arrow">
     </section>
     <!-- banner end -->
     <!-- 提供服務-start -->
