最新消息內頁

--- a/pages/3_newsMain.html
+++ b/pages/3_newsMain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>news</title>
+    <title>newsMainPage</title>
   </head>
   <body>
     <main>
@@ -17,7 +17,7 @@
           <div class="img-wrapper d-flex justify-content-center">
             <img class="news-pic" src="/assets/images/newsPic4.jpg" alt="" />
             <h3 class="news-content">
-              <a href="./3-1_news-content.html">
+              <a href="3-1_newsContent.html">
                 ＂每日精選美味套餐優惠＂
                 <p class="fs-4 d-flex justify-content-center">
                   <br /><br />活動期間:2023/10/10-2023/12/15
@@ -38,7 +38,9 @@
                 <div class="card-body card-content">
                   <h5 class="card-title">刷卡支付享95折優惠</h5>
                   <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
-                  <a href="#" class="btn btn-primary">了解更多</a>
+                  <a href="3-1_newsContent2.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
                 </div>
               </div>
 
@@ -52,7 +54,9 @@
                 <div class="card-body card-content">
                   <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
                   <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
-                  <a href="#" class="btn btn-primary">了解更多</a>
+                  <a href="3-1_newsContent3.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
                 </div>
               </div>
 
@@ -66,7 +70,9 @@
                 <div class="card-body card-content">
                   <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
                   <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
-                  <a href="#" class="btn btn-primary">了解更多</a>
+                  <a href="3-1_newsContent4.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
                 </div>
               </div>
             </div>
@@ -83,7 +89,7 @@
           <div class="card-body">
             <h5 class="card-title">每日精選美味套餐優惠</h5>
             <p class="card-text">活動期間:2023/10/10-2023/12/15</p>
-            <a href="#" class="btn btn-primary">了解更多</a>
+            <a href="3-1_newsContent.html" class="btn btn-primary">了解更多</a>
           </div>
         </div>
         <div class="card">
@@ -95,7 +101,7 @@
           <div class="card-body">
             <h5 class="card-title">刷卡支付享95折優惠</h5>
             <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
-            <a href="#" class="btn btn-primary">了解更多</a>
+            <a href="3-1_newsContent2.html" class="btn btn-primary">了解更多</a>
           </div>
         </div>
         <div class="card">
@@ -107,7 +113,7 @@
           <div class="card-body">
             <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
             <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
-            <a href="#" class="btn btn-primary">了解更多</a>
+            <a href="3-1_newsContent3.html" class="btn btn-primary">了解更多</a>
           </div>
         </div>
         <div class="card">
@@ -119,7 +125,7 @@
           <div class="card-body">
             <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
             <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
-            <a href="#" class="btn btn-primary">了解更多</a>
+            <a href="3-1_newsContent4.html" class="btn btn-primary">了解更多</a>
           </div>
         </div>
       </div>
