--- a/pages/index.html
+++ b/pages/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="link">
           <a
-            href="3_news.html"
+            href="3_newsMain.html"
             style="
               float: right;
               color: #4a4a4a;
@@ -360,13 +360,13 @@
                   <div class="star"></div>
                 </div>
                 <p>
-                  他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。 
+                  他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。
                 </p>
                 <p></p>
               </div>
             </div>
           </div>
-          <div class="col-md-5 col-sm-12 carousel-item ">
+          <div class="col-md-5 col-sm-12 carousel-item">
             <div class="card w-25">
               <ul class="d-flex">
                 <li>
