--- a/pages/3-1_newsContent.html
+++ b/pages/3-1_newsContent.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>newsContent</title>
   </head>
   <body>
     <main>
@@ -15,39 +15,44 @@
               <h3 class="list-title mt-5">最新消息/優惠</h3>
               <a
                 class="list-group-item list-group-item-action"
-                href="3-1_news-content.html"
+                href="3-1_newsContent.html"
                 >每日精選美味套餐優惠</a
               >
               <a
                 class="list-group-item list-group-item-action"
-                href="#list-item-2"
+                href="3-1_newsContent2.html"
                 >刷卡支付享95折優惠</a
               >
               <a
                 class="list-group-item list-group-item-action"
-                href="#list-item-3"
+                href="3-1_newsContent3.html"
                 >外帶早餐享9折優惠</a
               >
               <a
                 class="list-group-item list-group-item-action"
-                href="#list-item-4"
+                href="3-1_newsContent4.html"
                 >耶誕特色餐點新上市</a
               >
             </div>
           </div>
           <div class="col-8">
-            <a href="3_news.html" class="fs-3 font-NotoSerif mb-5"
-              ><img src="/assets/images/Keyboard arrow left.png" alt="" />
-              返回列表</a
-            >
-            <div class="news-title font-Noto Serif TC">
-              <h3>每日精選美味套餐優惠</h3>
+            <div class="font-NotoSerif mb-5 return-to-list">
+              <a href="3_newsMain.html"
+                ><img src="/assets/images/Keyboard arrow left.png" alt="" />
+                返回列表</a
+              >
             </div>
-            <div class="news-text text-break fs-4 lh-lg">
+            <div class="news-title font-Noto Serif TC">
+              <p>每日精選美味套餐優惠</p>
+            </div>
+            <br /><br />
+            <div class="d-flex justify-content-center news-content-pic">
+              <img src="/assets/images/restaurant.jpg" width="70%" />
+            </div>
+            <div class="news-text lh-lg d-flex justify-content-center">
               <p>
                 「探索今日的精選美味套餐，每道菜品都是大廚匠心烹製的絕妙組合。由清新的開胃菜到口感豐富的主菜，再到結尾的甜點饗宴，每一口都是味蕾的享受。我們每日提供的特惠套餐更是讓您以優惠價格品味頂級美食。無論是輕鬆午餐還是浪漫晚宴，我們的套餐選擇滿足各種口味和場合需求，為您帶來美好的用餐體驗。別錯過每日的驚喜，與我們一同探索美食的無窮可能！」
               </p>
-              <p>活動期間:2023/10/10-2024/3/31</p>
             </div>
           </div>
         </div>
