菜單分頁面

--- a/pages/index.html
+++ b/pages/index.html
@@ -223,7 +223,7 @@
         <div class="swiper-pagination"></div>
       </div>
       <a
-        href="#"
+        href="4_menu.html"
         class="menu-title-bg position-absolute translate-middle menu-title-bg-brunch"
       >
         <h3 class="fs-3 fs-md-1 font-NotoSerif text-light fw-bold">
@@ -232,7 +232,7 @@
         <h5 class="fs-5 font-Caveat text-light mt-1">Brunch Specials</h5>
       </a>
       <a
-        href="#"
+        href="4_menu.html"
         class="menu-title-bg position-absolute translate-middle menu-title-bg-news"
       >
         <h3 class="fs-3 fs-md-1 font-NotoSerif text-light fw-bold">
@@ -274,14 +274,14 @@
         <div class="swiper-pagination mt-6"></div>
       </div>
       <a
-        href="#"
+        href="4_menu.html"
         class="menu-title-bg position-absolute translate-middle menu-title-bg-brunch"
       >
         <h1 class="fs-1 font-NotoSerif text-light fw-bold">精 選 早 午 餐</h1>
         <p class="fs-3 font-Caveat text-light mt-1">Brunch Specials</p>
       </a>
       <a
-        href="#"
+        href="4_menu.html"
         class="menu-title-bg position-absolute translate-middle menu-title-bg-news"
       >
         <h1 class="fs-1 font-NotoSerif text-light fw-bold">最 新 餐 點</h1>
