--- a/pages/_login.html
+++ b/pages/_login.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <main>
         <%- include('./layout/header'); -%>
         <div>
             <div class="login-bg">
-              <img src="/img/image.png" alt="#">
+              <img src="/assets/images/offerService.png" alt="#">
             </div>
-          <div class="container d-flex justify-content-center">
+          <div class="container d-flex justify-content-center mb-5">
             <form class="login-body-bg row justify-content-center">
                 <div class="login-body">
                   <h1 class="h3 mb-3 font-weight-normal text-center text-light">登入</h1>
@@ -39,14 +39,14 @@
                   </div>
               
                   <div class="text-center mt-4">
-                    <button class="btn btn-lg btn-primary btn-block w-100" type="submit">登入</button>
+                    <button class="btn btn-lg btn-blue btn-block w-100" type="submit">登入</button>
                   </div>
                 </div>
                 <div class="mt-3">
-                  <div class="text-center my-3"><a href="#" class="text-decoration-none">忘記密碼</a></div>
+                  <div class="text-center my-3"><a href="#" class="text-decoration-none text-blue">忘記密碼</a></div>
                   <div class="d-flex justify-content-center">
                     <p class=" text-light pe-3">尚未成為用戶?</p>
-                    <a href="#" class="text-decoration-none">立即註冊</a>
+                    <a href="#" class="text-decoration-none text-blue">立即註冊</a>
                   </div>
                 </div>  
             </form>
