--- a/pages/index.html
+++ b/pages/index.html
@@ -309,7 +309,7 @@
               <h3>顧客評論</h3>
               <div>
                 <ul class="d-flex justify-content-between">
-                  <li class="arrow-left">
+                  <li class="arrow-left" id="previous">
                     <a
                       href="#"
                       class=""
@@ -322,7 +322,7 @@
                       <img src="/assets/images/Vector.png" alt="" />
                     </a>
                   </li>
-                  <li class="arrow-right">
+                  <li class="arrow-right" id="next">
                     <a
                       href="#"
                       class=""
@@ -339,59 +339,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 col-sm-12 carousel-item active">
-            <div class="card w-25">
-              <ul class="d-flex">
-                <li>
-                  <img
-                    src="/assets/images/Avatar.png"
-                    alt=""
-                    class="coad-img"
-                  />
-                </li>
-                <li><div class="card-name">陳大名</div></li>
-              </ul>
-              <div class="card-body">
-                <div class="star-box d-flex">
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                </div>
-                <p>
-                  他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。
-                </p>
-                <p></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5 col-sm-12 carousel-item">
-            <div class="card w-25">
-              <ul class="d-flex">
-                <li>
-                  <img
-                    src="/assets/images/Avatar (2).png"
-                    alt=""
-                    class="coad-img"
-                  />
-                </li>
-                <li><div class="card-name">陳大名1</div></li>
-              </ul>
-              <div class="card-body">
-                <div class="star-box d-flex">
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                  <div class="star"></div>
-                </div>
-                <p>
-                  他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。
-                </p>
-                <p></p>
-              </div>
-            </div>
+          <div class=" carousel-item d-flex" id="course-section">
           </div>
         </div>
         <div class="d-flex justify-content-center booking pb-10">
@@ -424,6 +372,80 @@
         // effect: "fade",
         spaceBetween: 0,
       });
+
+      // 顧客評論
+
+      const data = [
+    {
+      img: 'http://127.0.0.1:5500/img/Avatar.png',
+      title: '陳大名1',
+      content:'他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。',
+    },
+    {
+      img: 'http://127.0.0.1:5500/img/Avatar.png',
+      title: '陳大名2',
+      content:'他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。',
+    },
+    {
+      img: 'http://127.0.0.1:5500/img/Avatar.png',
+      title: '陳大名3',
+      content:'他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。',
+    },
+    {img: 'http://127.0.0.1:5500/img/Avatar.png',
+      title: '陳大名4',
+      content:'他們的線上預約系統非常方便，讓我能在繁忙的日程中輕鬆安排用餐時光。用餐環境也非常優雅。讓我感受到了真正的歐式風情。',
+    },
+  ];
+const courseSection = document.querySelector('#course-section');
+const previous = document.querySelector('#previous');
+const next = document.querySelector('#next');
+
+let num = 0;
+function render(num){
+  str = "";
+  data.filter((item, index) => num == index || num +1 == index)
+  .forEach(function(i){
+  str+=`     <div class="card me-12">
+              <ul class="d-flex">
+                <li><img src="${i.img}" alt="#" class="coad-img"></li>
+                <li><div class="card-name">${i.title}</div></li>
+              </ul>
+              <div class="card-body">
+                <div class="star-box d-flex">
+                  <div class="star"></div>
+                  <div class="star"></div>
+                  <div class="star"></div>
+                  <div class="star"></div>
+                  <div class="star"></div>
+                </div>
+                <p>${i.content}<p>
+              </div>
+            </div>`;
+            courseSection.innerHTML = str;
+  });
+};
+//操作前後
+
+previous.addEventListener('click',() => {
+  
+  if(num == 0){
+    return;
+  };
+  num --;
+  render(num);
+});
+
+next.addEventListener('click',() => {
+  console.log('uu')
+  //避免 num 超過資料
+  if(num == data.length - 1){
+    return;
+  };
+  num ++;
+  render(num);
+});
+
+render(num);
     </script>
     <script type="module" src="../main.js"></script>
   </body>
