--- a/2_aboutUs.html
+++ b/2_aboutUs.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
-  </head>
-  <body>
-    <header class="position-relative bg-light">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>aboutUs</title>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
+</head>
+<body>
+  <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -89,8 +88,57 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-    <h1>我是about</h1>
-    <footer class="py-4 border-top bg-pink">
+  <section class="bg_aboutUs d-flex justify-content-center align-items-center">
+    <div class="container">
+      <div class="bg-opcity col-md-6 mx-auto">
+        <h1 class="font-Caveat text-center text-gray-500 fw-bolder fs-3 fs-md-1">關於我們</h1>
+      </div>
+    </div>
+
+  </section>
+  <h2 class="fs-2 font-Caveat fw-bolder text-center bg-pink py-9 mb-0">我們的理念</h2>
+  <div class="container py-5 py-md-7">
+    <div class="row justify-content-center align-items-center mb-5">
+      <div class="col-lg-5">
+        <img class="d-block mx-auto" src="/Luminous-Brunch/assets/2-2-36a223eb.jpg" alt="">
+      </div>
+      <div class="col-lg-5">
+        <p class="fs-md-5">在現代忙碌的生活節奏中,讓人們能夠輕鬆地品味一份賞心悅目的早午餐。我們深知,擺盤精緻的美味餐點一直是人們的嚮往,然而,現實中忙碌的日程往往讓我們無法安心坐下來放鬆享受。於是,我們決定創建這個平台。</p>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-5">
+        <p class="fs-md-5">在現代忙碌的生活節奏中,讓人們能夠輕鬆地品味一份賞心悅目的早午餐。我們深知,擺盤精緻的美味餐點一直是人們的嚮往,然而,現實中忙碌的日程往往讓我們無法安心坐下來放鬆享受。於是,我們決定創建這個平台。</p>
+      </div>
+      <div class="col-lg-5">
+        <img class="img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-3-737d35ea.jpg" alt="">
+      </div>
+    </div>
+  </div>
+    <h2 class="fs-2 font-Caveat fw-bolder mb-0 text-center bg-pink py-9">本店特色</h2>
+  <div class="container py-5 py-md-7">
+    <div class="row justify-content-center align-items-center mb-9 py-7">
+      <div class="col-lg-5">
+        <img class="d-block mx-auto" src="/Luminous-Brunch/assets/Illustration (2)-71619cbb.png" alt="">
+      </div>
+      <div class="col-lg-5">
+        <h4 class="mb-4">即時預約</h4>
+        <p class="fs-md-5">我們提供一套方便快捷的線上預約訂位服務,您可以隨時選擇適合您的用餐時段,此預約系統為您省去了在繁忙時段可能需要等待的困擾,讓您可以確保在您心情最好的時刻來品味我們精心準備的早午餐。</p>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-5">
+        <h4 class="mb-4">多元菜單</h4>
+        <p class="fs-md-5">融合了歐式早午餐的美好與現代人的生活需求。我們不僅提供精心設計的菜單,包括沙拉系列、漢堡系列、三明治系列、早午餐拼盤、義大利麵系列以及多款精選飲品。</p>
+      </div>
+      <div class="col-lg-5">
+        <img class="img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-4-e3ebd928.jpg" alt="">
+      </div>
+    </div>
+  </div>
+  
+
+  <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -154,7 +202,6 @@
     </div>
   </div>
 </footer>
-
-    
-  </body>
+  
+</body>
 </html>
