--- a/3_newsMain.html
+++ b/3_newsMain.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>newsMainPage</title>
     <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
   </head>
   <body>
-    <header class="position-relative bg-light">
+    <main>
+      <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -89,8 +89,128 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-    <h1>我是about</h1>
-    <footer class="py-4 border-top bg-pink">
+      <div class="bgimage mb-9">
+        <div class="filter"></div>
+        <h3>最新消息/優惠</h3>
+      </div>
+      <div class="news-desktop">
+        <div class="list">
+          <div class="img-wrapper d-flex justify-content-center">
+            <img class="news-pic" src="/Luminous-Brunch/assets/newsPic4-d2ce3fd2.jpg" alt="" />
+            <h3 class="news-content">
+              <a href="3-1_newsContent.html">
+                ＂每日精選美味套餐優惠＂
+                <p class="fs-4 d-flex justify-content-center">
+                  <br /><br />活動期間:2023/10/10-2023/12/15
+                </p>
+              </a>
+            </h3>
+          </div>
+
+          <div style="width: 100%" class="mb-10">
+            <div class="d-flex justify-content-center">
+              <div class="card" style="width: 20%">
+                <img
+                  src="/Luminous-Brunch/assets/newsPic2-dc468fca.jpg"
+                  class="card-img-top card-img"
+                  alt="..."
+                  height="300px"
+                />
+                <div class="card-body card-content">
+                  <h5 class="card-title">刷卡支付享95折優惠</h5>
+                  <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
+                  <a href="3-1_newsContent2.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
+                </div>
+              </div>
+
+              <div class="card" style="width: 20%">
+                <img
+                  src="https://images.unsplash.com/photo-1627309302198-09a50ae1b209?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  class="card-img-top card-img"
+                  alt="..."
+                  height="300px"
+                />
+                <div class="card-body card-content">
+                  <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
+                  <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
+                  <a href="3-1_newsContent3.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
+                </div>
+              </div>
+
+              <div class="card" style="width: 20%">
+                <img
+                  src="/Luminous-Brunch/assets/newsPic3-2eb55dc4.jpg"
+                  class="card-img-top card-img-size"
+                  alt="..."
+                  height="300px"
+                />
+                <div class="card-body card-content">
+                  <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
+                  <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
+                  <a href="3-1_newsContent4.html" class="btn btn-primary"
+                    >了解更多</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="news-mobile">
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1493770348161-369560ae357d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">每日精選美味套餐優惠</h5>
+            <p class="card-text">活動期間:2023/10/10-2023/12/15</p>
+            <a href="3-1_newsContent.html" class="btn btn-primary">了解更多</a>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1475090169767-40ed8d18f67d?q=80&w=2532&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">刷卡支付享95折優惠</h5>
+            <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
+            <a href="3-1_newsContent2.html" class="btn btn-primary">了解更多</a>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1627309302198-09a50ae1b209?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
+            <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
+            <a href="3-1_newsContent3.html" class="btn btn-primary">了解更多</a>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1565895405137-3ca0cc5088c8?q=80&w=2671&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
+            <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
+            <a href="3-1_newsContent4.html" class="btn btn-primary">了解更多</a>
+          </div>
+        </div>
+      </div>
+      <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -154,7 +274,7 @@
     </div>
   </div>
 </footer>
-
+    </main>
     
   </body>
 </html>
