--- a/_login.html
+++ b/_login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
-  </head>
-  <body>
-    <header class="position-relative bg-light">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
+</head>
+<body>
+    <main>
+        <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -89,8 +89,50 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-    <h1>我是about</h1>
-    <footer class="py-4 border-top bg-pink">
+            <div class="login-bg">
+              <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#">
+            </div>
+          <div class="container d-flex justify-content-center mb-5">
+            <form class="login-body-bg row justify-content-center">
+                <div class="login-body">
+                  <h1 class="h3 mb-3 font-weight-normal text-center text-light">登入</h1>
+                  <div class="mb-2">
+                    <label for="inputEmail" class="sr-only text-light">Email address</label>
+                    <input
+                      type="email"
+                      id="inputEmail"
+                      class="form-control"
+                      placeholder="Email address"
+                      required
+                      autofocus
+                    />
+                  </div>
+                  <div class="mb-2">
+                    <label for="inputPassword" class="sr-only text-light">Password</label>
+                    <input
+                      type="password"
+                      id="inputPassword"
+                      class="form-control"
+                      placeholder="Password"
+                      required
+                    />
+                  </div>
+              
+                  <div class="text-center mt-4">
+                    <button class="btn btn-lg btn-blue btn-block w-100" type="submit">登入</button>
+                  </div>
+                </div>
+                <div class="mt-3">
+                  <div class="text-center my-3"><a href="#" class="text-decoration-none text-blue">忘記密碼</a></div>
+                  <div class="d-flex justify-content-center">
+                    <p class=" text-light pe-3">尚未成為用戶?</p>
+                    <a href="#" class="text-decoration-none text-blue">立即註冊</a>
+                  </div>
+                </div>  
+            </form>
+          </div>
+        </div>
+        <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -154,7 +196,7 @@
     </div>
   </div>
 </footer>
-
+    </main>
     
-  </body>
+</body>
 </html>
