--- a/_register.html
+++ b/_register.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
-  </head>
-  <body>
-    <header class="position-relative bg-light">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>register</title>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/header-3dc48a73.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/header-fbae1430.css">
+</head>
+<body>
+    <main>
+        <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -89,8 +89,91 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-    <h1>我是about</h1>
-    <footer class="py-4 border-top bg-pink">
+        <div class="login-bg">
+            <img src="/Luminous-Brunch/assets/offerService-b0330657.png" alt="#">
+          </div>
+        <div class="container d-flex justify-content-center">
+          <form class="login-body-bg row justify-content-center">
+              <div class="login-body">
+                <h1 class="h3 mb-3 font-weight-normal text-center text-light">新用戶註冊</h1>
+                <div class="mb-2">
+                  <label for="inputEmail" class="sr-only text-light">電子郵件</label>
+                  <input
+                    type="email"
+                    id="inputEmail"
+                    class="form-control"
+                    placeholder="請輸入電子郵件"
+                    required
+                    autofocus
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="inputPassword" class="sr-only text-light">密碼</label>
+                  <input
+                    type="password"
+                    id="inputPassword"
+                    class="form-control"
+                    placeholder="請輸入密碼"
+                    required
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="inputPassword" class="sr-only text-light">確認密碼</label>
+                  <input
+                    type="password"
+                    id="inputPassword"
+                    class="form-control"
+                    placeholder="確認輸入密碼"
+                    required
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="inputPassword" class="sr-only text-light">用戶姓名</label>
+                  <input
+                    type="name"
+                    id="inputName"
+                    class="form-control"
+                    placeholder="請選擇用戶姓名"
+                    required
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="inputPassword" class="sr-only text-light">電話</label>
+                  <input
+                    type="phone"
+                    id="inputPhone"
+                    class="form-control"
+                    placeholder="請輸入電話"
+                    required
+                  />
+                </div>
+                <div class="d-flex">
+                  <div class="form-check pe-3">
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                      <label class="form-check-label text-light" for="flexRadioDefault1">
+                        男
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                      <label class="form-check-label text-light" for="flexRadioDefault2">
+                        女
+                      </label>
+                    </div>
+                </div>
+                <div class="text-center mt-4">
+                  <button class="btn btn-lg btn-blue btn-block w-100" type="submit">註冊</button>
+                </div>
+                <div class="form-check mt-4">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                  <label class="form-check-label text-light" for="flexCheckDefault">
+                     <p>註冊即表示同意"Luminous Brunch"的使用條款及細則以及隱私權政策</p> 
+                  </label>
+                </div>
+              </div>
+          </form>
+        </div>
+        <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -154,7 +237,7 @@
     </div>
   </div>
 </footer>
-
+    </main>
     
-  </body>
+</body>
 </html>
