--- a/2_aboutUs.html
+++ b/2_aboutUs.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>aboutUs</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cf80bd50.js"></script>
-  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-80136ff4.css">
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-655811d3.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-c4696c84.css">
 </head>
 <body>
   <header class="position-relative bg-light">
@@ -96,43 +96,43 @@
     </div>
 
   </section>
-  <h2 class="fs-2 font-Caveat fw-bolder text-center bg-pink py-9 mb-0">我們的理念</h2>
+  <h2 class="fs-2 font-Caveat fw-bolder text-center bg-pink py-5 py-md-9 mb-0">我們的理念</h2>
   <div class="container py-5 py-md-7">
     <div class="row justify-content-center align-items-center mb-5">
-      <div class="col-lg-5">
-        <img class="d-block mx-auto" src="/Luminous-Brunch/assets/2-2-36a223eb.jpg" alt="">
+      <div class="col-lg-5 mb-4">
+        <img class="d-block mx-auto img_h_250" src="/Luminous-Brunch/assets/2-2-36a223eb.jpg" alt="">
       </div>
       <div class="col-lg-5">
-        <p class="fs-md-5">在現代忙碌的生活節奏中,讓人們能夠輕鬆地品味一份賞心悅目的早午餐。我們深知,擺盤精緻的美味餐點一直是人們的嚮往,然而,現實中忙碌的日程往往讓我們無法安心坐下來放鬆享受。於是,我們決定創建這個平台。</p>
+        <p class="fs-md-5 font-NotoSerif">在現代忙碌的生活節奏中,讓人們能夠輕鬆地品味一份賞心悅目的早午餐。我們深知,擺盤精緻的美味餐點一直是人們的嚮往,然而,現實中忙碌的日程往往讓我們無法安心坐下來放鬆享受。於是,我們決定創建這個平台。</p>
       </div>
     </div>
-    <div class="row justify-content-center align-items-center">
+    <div class="row justify-content-center align-items-center flex-column-reverse flex-lg-row">
       <div class="col-lg-5">
-        <p class="fs-md-5">在現代忙碌的生活節奏中,讓人們能夠輕鬆地品味一份賞心悅目的早午餐。我們深知,擺盤精緻的美味餐點一直是人們的嚮往,然而,現實中忙碌的日程往往讓我們無法安心坐下來放鬆享受。於是,我們決定創建這個平台。</p>
+        <p class="fs-md-5 font-NotoSerif">我們期許透過我們用心打理的每個細節,能為您帶來一份短暫但美好的早午餐時光。讓您在忙碌的生活中多一個選擇,用心照顧自己的每一天。</p>
       </div>
-      <div class="col-lg-5">
-        <img class="img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-3-737d35ea.jpg" alt="">
+      <div class="col-lg-5 mb-4">
+        <img class="w-100 img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-3-737d35ea.jpg" alt="">
       </div>
     </div>
   </div>
-    <h2 class="fs-2 font-Caveat fw-bolder mb-0 text-center bg-pink py-9">本店特色</h2>
+    <h2 class="fs-2 font-Caveat fw-bolder mb-0 text-center bg-pink py-5 py-md-9">本店特色</h2>
   <div class="container py-5 py-md-7">
     <div class="row justify-content-center align-items-center mb-9 py-7">
-      <div class="col-lg-5">
+      <div class="col-lg-5 mb-5">
         <img class="d-block mx-auto" src="/Luminous-Brunch/assets/Illustration (2)-71619cbb.png" alt="">
       </div>
       <div class="col-lg-5">
-        <h4 class="mb-4">即時預約</h4>
-        <p class="fs-md-5">我們提供一套方便快捷的線上預約訂位服務,您可以隨時選擇適合您的用餐時段,此預約系統為您省去了在繁忙時段可能需要等待的困擾,讓您可以確保在您心情最好的時刻來品味我們精心準備的早午餐。</p>
+        <h4 class="mb-4 text-center">即時預約</h4>
+        <p class="fs-md-5 font-NotoSerif">我們提供一套方便快捷的線上預約訂位服務,您可以隨時選擇適合您的用餐時段,此預約系統為您省去了在繁忙時段可能需要等待的困擾,讓您可以確保在您心情最好的時刻來品味我們精心準備的早午餐。</p>
       </div>
     </div>
-    <div class="row justify-content-center align-items-center">
+    <div class="row justify-content-center align-items-center flex-column-reverse flex-lg-row">
       <div class="col-lg-5">
-        <h4 class="mb-4">多元菜單</h4>
-        <p class="fs-md-5">融合了歐式早午餐的美好與現代人的生活需求。我們不僅提供精心設計的菜單,包括沙拉系列、漢堡系列、三明治系列、早午餐拼盤、義大利麵系列以及多款精選飲品。</p>
+        <h4 class="mb-4 text-center">多元菜單</h4>
+        <p class="fs-md-5 font-NotoSerif">融合了歐式早午餐的美好與現代人的生活需求。我們不僅提供精心設計的菜單,包括沙拉系列、漢堡系列、三明治系列、早午餐拼盤、義大利麵系列以及多款精選飲品。</p>
       </div>
-      <div class="col-lg-5">
-        <img class="img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-4-e3ebd928.jpg" alt="">
+      <div class="col-lg-5 mb-5">
+        <img class="w-100 img_h_250 d-block mx-auto" src="/Luminous-Brunch/assets/2-4-e3ebd928.jpg" alt="">
       </div>
     </div>
   </div>
