新增訂位功能

--- a/pages/5-1_booking.html
+++ b/pages/5-1_booking.html
@@ -12,95 +12,97 @@
 
       <div class="container d-flex justify-content-center mt-10 mb-10">
         <div class="row form-border d-flex justify-content-center">
+          <div class="step-indicator">
+            <div class="step active" id="step1"><span>填寫預訂</span></div>
+            <div class="line"></div>
+            <div class="step" id="step2"><span>資料確認</span></div>
+            <div class="line"></div>
+            <div class="step" id="step3"><span>訂位完成</span></div>
+          </div>
           <form>
-            <div class="step-indicator">
-              <div class="step active" id="step1"><span>填寫預訂</span></div>
-              <div class="line"></div>
-              <div class="step" id="step2"><span>資料確認</span></div>
-              <div class="line"></div>
-              <div class="step" id="step3"><span>訂位完成</span></div>
-            </div>
-            <div class="mb-3">
-              <label for="peoplenumber" class="form-label">用餐人數</label>
-              <select
-                class="form-select"
-                aria-label="Default select example"
-                id="peoplenumber"
-                name="peoplenumber"
-                required
-              >
-                <option value="1" selected>1位</option>
-                <option value="2">2位</option>
-                <option value="3">3位</option>
-                <option value="4">4位</option>
-              </select>
+            <div id="formContent">
+              <div class="mb-3">
+                <label for="peopleNumber" class="form-label">用餐人數</label>
+                <select
+                  class="form-select"
+                  aria-label="Default select example"
+                  id="peopleNumber"
+                  name="peopleNumber"
+                  required
+                >
+                  <option value="1" selected>1位</option>
+                  <option value="2">2位</option>
+                  <option value="3">3位</option>
+                  <option value="4">4位</option>
+                </select>
 
-              <div class="form-text">
-                <label for="date" class="form-label">用餐日期</label>
-                <label for="time" class="form-label">時間</label>
+                <div class="form-text">
+                  <label for="date" class="form-label">用餐日期</label>
+                  <label for="time" class="form-label">時間</label>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="date"
+                    name="date"
+                    required
+                  /><input
+                    type="time"
+                    id="time"
+                    name="time"
+                    min="09:00"
+                    max="18:00"
+                    required
+                    class="form-control"
+                  />
+                </div>
               </div>
-              <div class="d-flex justify-content-between">
+              <div class="mb-3">
+                <label for="name" class="form-label">姓名</label>
                 <input
-                  type="date"
+                  type="text"
                   class="form-control"
-                  id="date"
-                  name="date"
+                  id="name"
+                  placeholder="範例:陳曉明"
+                  style="width: 100%"
+                  name="name"
                   required
-                /><input
-                  type="time"
-                  id="time"
-                  name="appt"
-                  min="09:00"
-                  max="18:00"
-                  required
-                  class="form-control"
                 />
               </div>
-            </div>
-            <div class="mb-3">
-              <label for="formGroupExampleInput" class="form-label">姓名</label>
-              <input
-                type="text"
-                class="form-control"
-                id="formGroupExampleInput"
-                placeholder="範例:陳曉明"
-                style="width: 100%"
-                name="name"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="formGroupExampleInput2" class="form-label"
-                >電話</label
-              >
-              <input
-                type="tel"
-                class="form-control"
-                id="formGroupExampleInput2"
-                placeholder="範例:0939123456"
-                style="width: 100%"
-                name="phoneNumber"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="formGroupExampleInput3" class="form-label"
-                >信箱</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="formGroupExampleInput3"
-                placeholder="範例:abc@gmail.com"
-                style="width: 100%"
-                name="email"
-                required
-              />
-            </div>
-            <div class="d-flex justify-content-center mt-5">
-              <button type="submit" class="btn btn-primary" id="submitValue">
-                立即訂位
-              </button>
+              <div class="mb-3">
+                <label for="phoneNumber" class="form-label">電話</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phoneNumber"
+                  placeholder="範例:0939123456"
+                  style="width: 100%"
+                  name="phoneNumber"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">信箱</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="範例:abc@gmail.com"
+                  style="width: 100%"
+                  name="email"
+                  required
+                />
+              </div>
+              <div class="d-flex justify-content-evenly mt-5" id="btn-control">
+                <button
+                  type="click"
+                  class="btn btn-primary act-btn"
+                  id="submitBtn"
+                >
+                  立即訂位
+                </button>
+              </div>
             </div>
           </form>
         </div>
