--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-655811d3.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-c4696c84.css">
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/4_menu-c63e05f0.js"></script>
+    <link rel="stylesheet" href="/Luminous-Brunch/assets/4_menu-9d352fdb.css">
   </head>
   <body>
     <header class="position-relative bg-light">
@@ -42,39 +42,41 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-2_menu-burger.html"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-3_menu-sandwich.html"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-4_menu-brunch.html"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-5_menu-pasta.html"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="#"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-6_menu-drink.html"
               >飲品</a
             >
           </li>
         </ul>
       </li>
       <li class="nav_item border-bottom-1">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="#">線上訂位</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="5-1_booking.html"
+          >線上訂位</a
+        >
       </li>
       <li class="nav_item">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="#">會員註冊/登入</a>
@@ -99,8 +101,8 @@
       <div class="footer-box">
         <ul class="d-flex">
           <li><a href="#">關於我們</a></li>
-          <li><a href="#">最新消息/優惠</a></li>
-          <li><a href="#">線上訂位</a></li>
+          <li><a href="3_newsMain.html">最新消息/優惠</a></li>
+          <li><a href="5-1_booking.html">線上訂位</a></li>
           <li><a href="#">會員註冊/登入</a></li>
         </ul>
       </div>
