調整img(margin)、row、圓角、ul預設padding

--- a/pages/5-1_booking.html
+++ b/pages/5-1_booking.html
@@ -11,7 +11,7 @@
       <%- include('./layout/header'); -%>
 
       <div class="container d-flex justify-content-center mt-10 mb-10">
-        <div class="row form-border d-flex justify-content-center">
+        <div class="row w-100 form-border d-flex justify-content-center">
           <div class="step-indicator">
             <div class="step active" id="step1"><span>填寫預訂</span></div>
             <div class="line"></div>
