--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,7 @@
         <p class="font-Caveat">Lumunous</p>
         <p class="font-NotoSerif">&emsp;想提供您...</p>
       </div>
-      <ul class="offer-desktop">
+      <ul class="offer-desktop ps-0">
         <li class="d-flex flex-column mb-3">
           <img src="/assets/images/offerService3.png" alt="" />
           <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
@@ -81,7 +81,7 @@
           <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
         </li>
       </ul>
-      <ul class="offer-mobile">
+      <ul class="offer-mobile ps-0">
         <li class="d-flex flex-column mb-3">
           <img src="/assets/images/offerService3.png" alt="" />
           <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
