--- a/pages/5-1-1_booking.html
+++ b/pages/5-1-1_booking.html
@@ -9,7 +9,7 @@
     <main>
       <%- include('./layout/header'); -%>
       <div class="container d-flex justify-content-center mt-10 mb-10">
-        <div class="row form-border d-flex justify-content-center">
+        <div class="row w-100 form-border d-flex justify-content-center">
           <div class="step-indicator">
             <div class="step" id="step1"><span>填寫預訂</span></div>
             <div class="line"></div>
