'新增訂位資訊頁'

--- a/pages/6-1-1-1_modify-member-info.html
+++ b/pages/6-1-1-1_modify-member-info.html
@@ -25,11 +25,11 @@
             <br>
             <label for="phoneNumber" class="mb-1">手機號碼</label>
             <br>
-            <input type="text" id="phoneNumber" class="w-100 mb-5 bg-transparent py-1 border border-primary">
+            <input type="tel" id="phoneNumber" class="w-100 mb-5 bg-transparent py-1 border border-primary">
             <br>
             <label for="email" class="mb-1">信箱</label>
             <br>
-            <input type="text" id="email" class="w-100 mb-8 bg-transparent py-1 border border-primary">
+            <input type="email" id="email" class="w-100 mb-8 bg-transparent py-1 border border-primary">
             <div class="d-flex justify-content-around mb-8">
               <button class="btn btn-outline-primary px-4 px-md-7">取消</button>
               <button class="btn btn-primary px-4 px-md-7">儲存</button>
