--- a/pages/_register.html
+++ b/pages/_register.html
@@ -40,7 +40,7 @@
                   <label for="inputPassword" class="sr-only text-light">確認密碼</label>
                   <input
                     type="password"
-                    id="inputPassword"
+                    id="checkPassword"
                     class="form-control"
                     placeholder="確認輸入密碼"
                     required
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                  <button class="btn btn-lg btn-blue btn-block w-100" type="submit">註冊</button>
+                  <button class="btn btn-lg btn-blue btn-block w-100" type="submit" id="signup">註冊</button>
                 </div>
                 <div class="form-check mt-4">
                   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
