--- a/pages/5-1-1_booking.html
+++ b/pages/5-1-1_booking.html
@@ -29,5 +29,6 @@
       <%- include('./layout/footer'); -%>
     </main>
   </body>
+  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <script type="module" src="../main.js"></script>
 </html>
