--- a/pages/5-1_booking.html
+++ b/pages/5-1_booking.html
@@ -109,6 +109,7 @@
       </div>
       <%- include('./layout/footer'); -%>
     </main>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script type="module" src="../main.js"></script>
   </body>
 </html>
