--- a/pages/_login.html
+++ b/pages/_login.html
@@ -45,7 +45,7 @@
                   <div class="text-center my-3"><a href="#" class="text-decoration-none text-blue">忘記密碼</a></div>
                   <div class="d-flex justify-content-center">
                     <p class=" text-light pe-3">尚未成為用戶?</p>
-                    <a href="#" class="text-decoration-none text-blue">立即註冊</a>
+                    <a href="_register.html" class="text-decoration-none text-blue">立即註冊</a>
                   </div>
                 </div>  
             </form>
