--- a/pages/_login.html
+++ b/pages/_login.html
@@ -38,7 +38,7 @@
                   </div>
               
                   <div class="text-center mt-4">
-                    <button class="btn btn-lg btn-blue btn-block w-100" type="submit">登入</button>
+                    <button class="btn btn-lg btn-blue btn-block w-100" type="submit" id="login">登入</button>
                   </div>
                 </div>
                 <div class="mt-3">
