--- a/pages/_login.html
+++ b/pages/_login.html
@@ -20,7 +20,7 @@
                     <input
                       type="email"
                       id="inputEmail"
-                      class="form-control"
+                      class="form-control w-100"
                       placeholder="Email address"
                       required
                       autofocus
@@ -31,7 +31,7 @@
                     <input
                       type="password"
                       id="inputPassword"
-                      class="form-control"
+                      class="form-control w-100"
                       placeholder="Password"
                       required
                     />
