--- a/pages/_register.html
+++ b/pages/_register.html
@@ -20,7 +20,7 @@
                   <input
                     type="email"
                     id="inputEmail"
-                    class="form-control"
+                    class="form-control w-100"
                     placeholder="請輸入電子郵件"
                     required
                     autofocus
@@ -31,7 +31,7 @@
                   <input
                     type="password"
                     id="inputPassword"
-                    class="form-control"
+                    class="form-control w-100"
                     placeholder="請輸入密碼"
                     required
                   />
@@ -41,7 +41,7 @@
                   <input
                     type="password"
                     id="checkPassword"
-                    class="form-control"
+                    class="form-control w-100"
                     placeholder="確認輸入密碼"
                     required
                   />
@@ -51,7 +51,7 @@
                   <input
                     type="name"
                     id="inputName"
-                    class="form-control"
+                    class="form-control w-100"
                     placeholder="請選擇用戶姓名"
                     required
                   />
@@ -61,7 +61,7 @@
                   <input
                     type="phone"
                     id="inputPhone"
-                    class="form-control"
+                    class="form-control w-100"
                     placeholder="請輸入電話"
                     required
                   />
